fix: Minor alignment issue

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -15,6 +15,7 @@ address {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  align-items: center;
   text-decoration: none;
 
   span {
